<resources>
    <string name="app_name">Football App</string>
    <string name="last_match">"eventspastleague.php"</string>
    <string name="next_match">"eventsnextleague.php"</string>
    <string name="vs">VS</string>
    <string name="goal">Goal</string>
    <string name="shots">Shots</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="lineups">Lineups</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="defense">Defense</string>
    <string name="added_to_fav">Added To Favourite</string>
    <string name="deleted_to_fav">Deleted From Favourite</string>
    <string name="favourites">Favourites</string>
    <string name="match">Match</string>
    <string name="teamses">Team</string>
    <string name="favourite">Favourite</string>
    <string name="title_activity_scrolling_detail">ScrollingDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling_details">ScrollingDetailsActivity</string>
    <string name="title_activity_scrolling_player_detail">ScrollingPlayerDetailActivity</string>
    <string name="overview">Overview</string>
    <string name="country">Country</string>
    <string name="manager">Manager</string>
    <string name="stadium">Stadium</string>
    <string name="stadium_name">Stadium Name:</string>
    <string name="stadium_location">Stadium Location:</string>
    <string name="stadium_capacity">Stadium Capacity:</string>
    <string name="jersey">Jersey</string>
    <string name="witght_kg">Witght(Kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="_65_5">65,5</string>
    <string name="_1_75">1,75</string>
    <string name="position">Position</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="time">Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
</resources>
