<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_scrolling_player_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.detailteam.ScrollingPlayerDetailActivity">
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:text="@string/witght_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="13dp" app:layout_constraintTop_toBottomOf="@+id/tv_player_name_details"/>
    <TextView
            android:text="@string/height_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" android:layout_marginRight="60dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"/>
    <TextView
            android:text="@string/_65_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_player_weight_detail" app:layout_constraintStart_toStartOf="@+id/textView10"
            android:layout_marginTop="13dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/textView10"

            android:textSize="25sp" android:textStyle="bold" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/_1_75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_height_player_detail"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_player_weight_detail"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11" android:textSize="25sp"
            android:textColor="@android:color/black" android:textStyle="bold"/>
    <TextView
            android:text="@string/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_position_player_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description_player_detail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/divider4" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="20dp"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_player_detail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <View
            android:id="@+id/divider4"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_position_player_detail"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_player_name_details" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@android:color/black"/>
</android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>