<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.detailteam.OverviewFragment"
        android:padding="@dimen/margin_master">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/overview"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/tv_overview_team_details"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview eam"
                android:textSize="13sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10dp"
/>
        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/country"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/tv_country_team_details"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview eam"
                android:textSize="13sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10dp"/>
        <TextView
                android:layout_marginTop="@dimen/margin_master"
                android:text="@string/manager"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/tv_manager_team_details"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview eam"
                android:textSize="13sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10dp"/>
        <TextView
                android:layout_marginTop="@dimen/margin_master"
                android:text="@string/stadium"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <TextView
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stadium_name"
                android:textStyle="bold"
                android:textSize="13sp"/>
        <TextView
                android:id="@+id/tv_stadiumname_team_details"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview eam"
                android:textSize="13sp"/>
        <TextView
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stadium_location"
                android:textStyle="bold"
                android:textSize="13sp"/>
        <TextView
                android:id="@+id/tv_stadiumlocation_team_details"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview eam"
                android:textSize="13sp"/>
        <TextView
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stadium_capacity"
                android:textStyle="bold"
                android:textSize="13sp"/>
        <TextView
                android:id="@+id/tv_stadiumcapacity_team_details"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Overview eam"
                android:textSize="13sp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginTop="10dp"/>
        <TextView
                android:layout_marginTop="@dimen/margin_master"
                android:text="@string/jersey"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>
        <ImageView
                android:id="@+id/img_jersey_team_detail"
                android:layout_marginTop="@dimen/margin_master"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>